[FIX] estate: required by VRA and General Affair Activity timesheet

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -18,6 +18,7 @@
                             <field name="standard_price"/>
                             <field name="code"/>
                             <field name="type"/>
+                            <field name="activity_type"/>
                         </group>
                         <!-- move to estate_account module
                         <group name="account" string="Account">
