[ADD] estate: centralized reporting menu

--- a/estate/views/estate.xml
+++ b/estate/views/estate.xml
@@ -182,5 +182,9 @@
                   parent="estate_master_menu"
                   action="action_list_parameter_config"
                   groups="base.group_no_one"/>
+
+        <!-- Estate Reporting -->
+        <menuitem id="menu_estate_reporting" name="Estate" parent="base.menu_reporting" sequence="5"/>
+        <menuitem id="menu_estate_upkeep_reporting" name="Upkeep" parent="estate.menu_estate_reporting" sequence="20"/>
     </data>
 </openerp>
