--- a/estate_vehicle/views/view_summary_cost_vehicle.xml
+++ b/estate_vehicle/views/view_summary_cost_vehicle.xml
@@ -300,13 +300,13 @@
                 <field name="context">{"search_default_groupby_year" : True}</field>
         </record>
 
-        <menuitem id="estate_summary_cost_vehicle" name="Summary Cost Vehicle"
-                  parent="estate_vehicle.estate_vehicle_timesheet_menu"
+        <menuitem id="estate_summary_cost_vehicle" name="Vehicle Cost"
+                  parent="fleet.menu_fleet_reporting"
                   action="action_list_view_summary_vehicle"
                   groups="base.group_no_one" sequence="14"/>
 
-        <menuitem id="estate_summary_cost_vehicle_detail" name="Summary Cost Vehicle Detail"
-                  parent="estate_vehicle.estate_vehicle_timesheet_menu"
+        <menuitem id="estate_summary_cost_vehicle_detail" name="Vehicle Cost Detail"
+                  parent="fleet.menu_fleet_reporting"
                   action="action_list_view_summary_vehicle_detail"
                   groups="base.group_no_one" sequence="15"/>
 
