--- a/estate_vehicle/views/view_timesheet_premi.xml
+++ b/estate_vehicle/views/view_timesheet_premi.xml
@@ -47,7 +47,7 @@
                 <field name="context">{"search_default_groupby_date" : True}</field>
         </record>
 
-        <menuitem id="estate_timesheet_premi" name="Timesheet Premi"
+        <menuitem id="estate_timesheet_premi" name="Vehicle Piece Rate"
                   parent="estate_vehicle.estate_vehicle_timesheet_menu"
                   action="action_list_view_timesheet_config"
                   groups="base.group_no_one" sequence="13"/>
