--- a/estate_nursery/views/dashboard_selection.xml
+++ b/estate_nursery/views/dashboard_selection.xml
@@ -177,13 +177,13 @@
 
 
         <menuitem
-            name="Selection Dashboard" parent="nursery_seed_statement"
+            name="Selection Dashboard" parent="estate.menu_estate_reporting"
             action="open_board_selection"
             sequence="1"
             id="menu_board_selection" icon="terp-graph"/>
 
         <menuitem
-            name="Batch Dashboard" parent="nursery_seed_statement"
+            name="Batch Dashboard" parent="estate.menu_estate_reporting"
             action="open_board_batch"
             sequence="2"
             id="menu_board_batch" icon="terp-graph"/>
