--- a/estate_nursery/views/estate_nursery_recovery.xml
+++ b/estate_nursery/views/estate_nursery_recovery.xml
@@ -160,7 +160,7 @@
         <!-- MENU -->
         <menuitem id="nursery_seed_recovery"
                   name="Recovery Seed"
-                  parent="detail_batch"
+                  parent="nursery_seed_batch"
                   action="action_list_recovery" sequence="17"
                   groups="estate.group_agronomi"/>
     </data>
