--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -449,7 +449,7 @@
         <!-- MENU -->
         <menuitem id="nursery_seed_selection"
                   name="Selection Seed"
-                  parent="detail_batch"
+                  parent="nursery_seed_batch"
                   action="action_list_selection" sequence="15"
                   groups="estate.group_agronomi"/>
         <menuitem id="nursery_line_selection_stage"
