--- a/estate_nursery/views/estate_planting_view.xml
+++ b/estate_nursery/views/estate_planting_view.xml
@@ -74,7 +74,7 @@
                                statusbar_visible="draft,confirmed,done"
                                statusbar_color='{"draft":"blue",}'/>
                     </header>
-
+                    <sheet>
                         <div class="oe_title" colors="blue">
                              <h1>
                                 <label string="Seed Delivery Order For"
@@ -160,6 +160,7 @@
 
                             </notebook>
                         </group>
+                    </sheet>
                         <div class="oe_chatter">
                             <field name="message_follower_ids" widget="mail_followers"/>
                             <field name="message_ids" widget="mail_thread" options='{"thread_level": 1}'/>
